# hackathon-2-phase4

./: .env  ACCESS_YOUR_APP.md  CHANGELOG.md  CHAT_FIXED.md  CLAUDE.md  CONFIGURATION_FIXES.md  CONFIGURATION_REVIEW.md  CONFIGURATION_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  E2E_TEST_RESULTS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_REPORT.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FIXING_CHAT_NOW.md  FIX_CHAT_405_ERROR.md  FIX_FAILED_TO_FETCH.md  FIX_SIGNUP_ERROR.md  HOW_TO_ACCESS.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_FIXES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_GUIDE.md  MIGRATION_REPORT.md  NEXT_STEPS.md  QUICKSTART_VALIDATION.md  QUICK_ACCESS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RESUME_DEPLOYMENT.md  SETUP_COMPLETE.md  SIGNUP_FIX_GUIDE.md  START_HERE.md  SUMMARY.md  TYPE_CHECKING_AND_RATE_LIMITING.md  (+4 more)
backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
backend/data/: agent_sessions.db  agent_sessions.db-shm  agent_sessions.db-wal
backend/src/: config.py
backend/src/agent/: gemini_client.py  guardrails.py  session.py  session_manager.py  todo_agent.py
backend/src/api/: auth_utils.py  dependencies.py  main.py  thread_queue.py
backend/src/database/: cleanup.py  connection.py
backend/src/mcp/: server.py
backend/src/models/: __init__.py  contact_submission.py  (+4 more)
backend/tests/: test_api_flow.py  test_chat_flow.py  test_final.py  test_full_crud.py
(+190 files in other folders)
